// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for "linux": local 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.linux
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.text"
      id="onboarding.analysis.sq_scanner.text"
      values={
        {
          "dir": <code>
            bin
          </code>,
          "env_var": <code>
            PATH
          </code>,
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/scanners/sonarscanner/"
          >
            onboarding.analysis.sq_scanner.docs_link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
</div>
`;

exports[`should render correctly for "linux": remote 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.linux
  </h4>
  <CodeSnippet
    snippet="export SONAR_SCANNER_VERSION=4.7.0.2747
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
export SONAR_SCANNER_OPTS="-server"
"
  />
  <h4
    className="spacer-bottom big-spacer-top"
  >
    onboarding.analysis.sq_scanner.sonar_token_env.header
  </h4>
  <ul
    className="list-styled"
  >
    <li
      className="markdown"
    >
      onboarding.analysis.sq_scanner.sonar_token_env.var_name
      :
       
      <code>
        SONAR_TOKEN
      </code>
      <ClipboardButton
        className="spacer-left"
        copyValue="SONAR_TOKEN"
      />
    </li>
    <li
      className="markdown"
    >
      onboarding.analysis.sq_scanner.sonar_token_env.var_value
      :
       
      <code>
        token
      </code>
      <ClipboardButton
        className="spacer-left"
        copyValue="token"
      />
    </li>
  </ul>
</div>
`;

exports[`should render correctly for "mac": local 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.mac
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.text"
      id="onboarding.analysis.sq_scanner.text"
      values={
        {
          "dir": <code>
            bin
          </code>,
          "env_var": <code>
            PATH
          </code>,
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/scanners/sonarscanner/"
          >
            onboarding.analysis.sq_scanner.docs_link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
</div>
`;

exports[`should render correctly for "mac": remote 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.mac
  </h4>
  <CodeSnippet
    snippet="export SONAR_SCANNER_VERSION=4.7.0.2747
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-macosx
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-macosx.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
export SONAR_SCANNER_OPTS="-server"
"
  />
  <h4
    className="spacer-bottom big-spacer-top"
  >
    onboarding.analysis.sq_scanner.sonar_token_env.header
  </h4>
  <ul
    className="list-styled"
  >
    <li
      className="markdown"
    >
      onboarding.analysis.sq_scanner.sonar_token_env.var_name
      :
       
      <code>
        SONAR_TOKEN
      </code>
      <ClipboardButton
        className="spacer-left"
        copyValue="SONAR_TOKEN"
      />
    </li>
    <li
      className="markdown"
    >
      onboarding.analysis.sq_scanner.sonar_token_env.var_value
      :
       
      <code>
        token
      </code>
      <ClipboardButton
        className="spacer-left"
        copyValue="token"
      />
    </li>
  </ul>
</div>
`;

exports[`should render correctly for "win": local 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.win
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.text"
      id="onboarding.analysis.sq_scanner.text"
      values={
        {
          "dir": <code>
            bin
          </code>,
          "env_var": <code>
            %PATH%
          </code>,
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/scanners/sonarscanner/"
          >
            onboarding.analysis.sq_scanner.docs_link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
</div>
`;

exports[`should render correctly for "win": remote 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.win
  </h4>
  <CodeSnippet
    snippet="$env:SONAR_SCANNER_VERSION = "4.7.0.2747"
$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
$env:SONAR_SCANNER_HOME = "$env:SONAR_DIRECTORY/sonar-scanner-$env:SONAR_SCANNER_VERSION-windows"
rm $env:SONAR_SCANNER_HOME -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_SCANNER_HOME -type directory
(New-Object System.Net.WebClient).DownloadFile("https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$env:SONAR_SCANNER_VERSION-windows.zip", "$env:SONAR_DIRECTORY/sonar-scanner.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/sonar-scanner.zip", "$env:SONAR_DIRECTORY")
rm ./.sonar/sonar-scanner.zip -Force -ErrorAction SilentlyContinue
$env:Path += ";$env:SONAR_SCANNER_HOME/bin"
$env:SONAR_SCANNER_OPTS="-server"
"
  />
  <h4
    className="spacer-bottom big-spacer-top"
  >
    onboarding.analysis.sq_scanner.sonar_token_env.header
  </h4>
  <ul
    className="list-styled"
  >
    <li
      className="markdown"
    >
      onboarding.analysis.sq_scanner.sonar_token_env.var_name
      :
       
      <code>
        SONAR_TOKEN
      </code>
      <ClipboardButton
        className="spacer-left"
        copyValue="SONAR_TOKEN"
      />
    </li>
    <li
      className="markdown"
    >
      onboarding.analysis.sq_scanner.sonar_token_env.var_value
      :
       
      <code>
        token
      </code>
      <ClipboardButton
        className="spacer-left"
        copyValue="token"
      />
    </li>
  </ul>
</div>
`;
